# advent-of-learning

./: README.md  requirements.txt
2015/day1/: part1.py  part2.py
2015/day2/: part1.py  part2.py
2015/day3/: part1.py  part2.py
2015/day4/: part1.py  part2.py
2015/day5/: part1.py  part2.py
2015/day6/: part1.py  part1_test.py  part2.py
2015/day7/: part1.py
2020/day-1/: part2.py
2020/day-2/: part1.py  part2.py
2020/day-3/: part1.py
2021/day-1/: part1.py  part2.py
2021/day-2/: part1.py  part2.py
2021/day-3/: part1.py  part2.py  part2.txt
python/: README.md
python/2015/day2/: part2.py
python/2015/day3/: part1.py
python/2015/day4/: part2.py
python/2015/day5/: part1.py
python/2015/day6/: part2.py
python/2020/day-1/: part1.py
python/2021/day-1/: part2.txt
python/2021/day-2/: part2.txt
python/2021/day-3/: part1.py
rust/: README.md
rust/2022/: .env.template  .gitignore  Cargo.toml
rust/2022/day-1/: Cargo.toml
rust/2022/day-1/src/: main.rs
rust/2022/day-2/: Cargo.toml
rust/2022/day-2/src/: main.rs
rust/2022/day-3/: Cargo.toml
rust/2022/day-3/src/: main.rs
rust/2022/day-4/: Cargo.toml
rust/2022/day-4/src/: main.rs
rust/2022/day-5/: Cargo.toml
rust/2022/day-5/src/: main.rs
rust/2022/day-6/: Cargo.toml
rust/2022/day-6/src/: main.rs
rust/2022/day-7/: Cargo.toml
rust/2022/day-7/src/: main.rs
rust/2022/day-8/: Cargo.toml
rust/2022/day-8/src/: main.rs
rust/2022/day-9/: Cargo.toml
rust/2022/day-9/src/: main.rs
rust/2022/lib/: Cargo.toml
rust/2022/lib/src/: lib.rs
