[package]
name = "day-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
